[package]
name = "rode-be-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
once_cell = "1.19.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "chrono", "uuid", "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
